@@ -1,3 +1,6 @@
+*Tue Nov 8 2011 Henri Gavin <.> 0.20100105
+- user-manual.html - slight simplification of Windows installation instructions
+
 *Thu Nov 3 2011 Henri Gavin <.> 0.20100105
 - user-manual.html - small wordsmith edits regarding experimental validation of shear correction factors.
 
